--- a/development.ini
+++ b/development.ini
@@ -14,7 +14,7 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar
 
-sqlalchemy.url = sqlite:///%(here)s/expense_tracker.sqlite
+# sqlalchemy.url = postgres://username:password@localhost:5432/expense_tracker
 
 retry.attempts = 3
 
@@ -54,7 +54,8 @@ handlers =
 qualname = expense_tracker
 
 [logger_sqlalchemy]
-level = INFO
+ # only tell me when things go wrong
+level = WARN
 handlers =
 qualname = sqlalchemy.engine
 # "level = INFO" logs SQL queries.
